--- a/eventos.html
+++ b/eventos.html
@@ -93,7 +93,7 @@
                         <p>
                     </div>
                     <figure>
-                        <img src="img/corazon 2.jpg" alt="">
+                        <img src="img/F2.jpg" alt="">
                     </figure>
                 </div>
 
